# mat-vis

./: .envrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Containerfile  Containerfile.materialx  LICENSE  README.md  _typos.toml  flake.nix  justfile  justfile.project  pyproject.toml  renovate.json
.dagger/: dagger.json  pyproject.toml
.dagger/src/mat_vis_ci/: __init__.py  main.py
.devcontainer/: CHANGELOG.md  devcontainer.json  docker-compose.yml
.devcontainer/scripts/: init-git.sh  init-precommit.sh  post-attach.sh  post-create.sh  post-start.sh  setup-git-conf.sh  verify-auth.sh
.github/: CODEOWNERS  labeler.yml
.github/actions/notify-on-failure/: action.yml
.github/workflows/: bake.yml  ci.yml  container.yml  derive-ktx2.yml  labeler.yml  promote-data-release.yml  pypi.yml  rebuild-manifest.yml  regenerate-rowmaps.yml  release-validate.yml  watch.yml
clients/: example.sh  mat-vis.sh  test_client.sh
clients/js/: mat-vis-client.mjs  package.json  test_client.mjs
clients/python/: README.md  adapters.py  mat_vis_client.py  mat_vis_client_standalone.py  pyproject.toml  test_client.py
clients/python/src/mat_vis_client/: __init__.py  adapters.py  client.py  schema.py
clients/python/tests/: test_cache.py  test_client.py  test_errors.py  test_mtlx_api.py  test_per_op_tag.py  test_public_api.py  test_schema.py  test_search_unified.py
clients/rust/: Cargo.toml
clients/rust/src/: main.rs
docs/: catalog.md  user-stories.md
docs/decisions/: 0001-storage-architecture-json-index-parquet-textures.md  0002-hosting-github-releases-watch-and-pr.md  0003-resolution-tiers-and-partitioning.md  0004-access-modes-lazy-local-cache-default.md  0005-sql-shim-embedded-in-clients.md  0006-release-versioning-and-delta-overlays.md  README.md
docs/issues/: issue-1.md  issue-10.md  issue-11.md  issue-2.md  issue-3.md  issue-4.md  issue-5.md  issue-6.md  issue-7.md  issue-8.md  issue-9.md
docs/pull-requests/: pr-12.md  pr-13.md  pr-14.md  pr-15.md  pr-16.md  pr-17.md  pr-18.md  pr-19.md  pr-20.md  pr-21.md
docs/specs/: field-name-mapping.md  index-schema.json  release-manifest-schema.json  rowmap-schema.json  source-apis.md
index/: ambientcg.json  physicallybased.json  polyhaven.json
mtlx/ambientcg/Bricks104/: material.mtlx
mtlx/ambientcg/Grass005/: material.mtlx
mtlx/ambientcg/Ground103/: material.mtlx
mtlx/ambientcg/Metal063/: material.mtlx
mtlx/ambientcg/Road012A/: material.mtlx
mtlx/ambientcg/Rock063/: material.mtlx
mtlx/ambientcg/Rock064/: material.mtlx
mtlx/ambientcg/Wood092/: material.mtlx
mtlx/ambientcg/Wood094/: material.mtlx
mtlx/ambientcg/Wood095/: material.mtlx
scripts/: bake-chunks.sh  check-dagger-shell-safety.py  sync-js-version.py  sync-spec.py  sync-standalone-version.py
src/mat_vis_baker/: __main__.py  bake.py  catalog.py  catalog_from_release.py  common.py  derive_from_release.py  index_builder.py  ktx2.py  manifest.py  mtlx_tier.py  parquet_writer.py  spec.py  upload.py
src/mat_vis_baker/_spec/: index-schema.json
src/mat_vis_baker/sources/: ambientcg.py  gpuopen.py  physicallybased.py  polyhaven.py
tests/: __init__.py  conftest.py  test_category_filter.py  test_common.py  test_derive_from_release.py  test_emit_rowmaps.py  test_parquet_writer.py  test_rowmap_emission.py  test_spec_sync.py  test_standalone_drift.py  test_upload.py  test_version_sync.py  test_zip_safety.py
