[project]
name = "mat-vis-client"
version = "0.4.1"
description = "Pure Python client for mat-vis PBR textures — HTTP range reads, zero deps"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Lars Gerchow" }]
keywords = ["materials", "pbr", "textures", "mat-vis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Multimedia :: Graphics",
]
dependencies = []

[project.scripts]
mat-vis-client = "mat_vis_client.client:main"

[project.urls]
Homepage = "https://github.com/MorePET/mat-vis"
Repository = "https://github.com/MorePET/mat-vis"
Issues = "https://github.com/MorePET/mat-vis/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mat_vis_client"]
